08/11/2011:
            First working version of the program (v0.0.1) posted.